<resources>
    <string name="app_name">Car Note</string>
    <string name="date">Date</string>
    <string name="mileage">Mileage</string>
    <string name="added_liters">Liters added</string>
    <string name="part_replaced">Replaced part</string>
    <string name="tank_cost">Tank cost</string>
    <string name="repair_cost">Koszt naprawy</string>
    <string name="confirm">Confirm</string>
    <string name="go_to_tank_form_button">TankUp</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="color">Color</string>
    <string name="make_demo">VolksWagen</string>
    <string name="model_demo">Golf</string>
    <string name="color_demo">Bronze</string>
    <string name="mileage_demo">60000</string>
    <string name="new_repair">Repair</string>
    <string name="repairs">Repairs</string>
    <string name="new_collision">Colission</string>
    <string name="new_tankup">Tankup</string>
    <string name="new_car">New \nCar</string>
    <string name="liter_validation_notempty_message">Liters must be given!</string>
    <string name="liter_validation_positive_message">Liters must be positive!</string>
    <string name="cost_validation_notempty_message">Cost must be given!</string>
    <string name="cost_validation_positive_message">Cost must be positive</string>
    <string name="mileage_validation_notempty_message">Mileage must be given!</string>
    <string name="mileage_validation_positive_message">Mileage must be positive!</string>
    <string name="mileage_validation_notlesser_message">Mileage is lesser than last time!</string>
    <string name="is_this_master_car">Is that your common car?</string>
    <string name="plates">Car plates</string>
    <string name="witness_label">Witness</string>
    <string name="gps_title">Time to 100km/h</string>
    <string name="car_info_title">Statistics</string>
    <string name="fuel_consumption">Fuel consumption</string>
    <string name="fuel">Fuel</string>
    <string name="efficiency">Efficiency</string>
    <string name="repairs_costs_monthly">Monthly repairs</string>
    <string name="liter_last_on">One liter lasts on</string>
    <string name="km_costs">One Km cost</string>
    <string name="average_price">Average price</string>
    <string name="longest_without_tankup">Longest on tank</string>
    <string name="tankup_frequency">Tankup frequency</string>
    <string name="one_day_cost">One day cost</string>
    <string name="repair_frequency">Repair Frequency</string>
    <string name="in_total">In total</string>
    <string name="days">days</string>
    <string name="fuel_tank_capacity">Fuel tank capacity</string>
    <string name="liters">Liters</string>
    <string name="kilometers">Kilometers</string>
    <string name="fueltank_demo">25</string>
    <string name="was_full_tankup">Full of petrol?</string>
    <string name="remember_tank_full_sometimes">Remember to tank fuel full from time to time. \nIt\'s necessary to calculate statistics!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_page">Login Page</string>
    <string name="log_in">Log in</string>
    <string name="register_page">Register page</string>
    <string name="register">Register</string>
    <string name="click_to_log_in">Click to log in!</string>
    <string name="click_to_register">Click to register!</string>
</resources>
