<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyColor"
    android:orientation="vertical"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                style="@style/LabelTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/make" />

            <EditText
                android:id="@+id/make_edittext"
                style="@style/LabelTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/make_demo" />

            <TextView
                style="@style/LabelTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/model" />

            <EditText
                android:id="@+id/model_edittext"
                style="@style/LabelTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/model_demo" />

            <TextView
                style="@style/LabelTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color" />

            <EditText
                android:id="@+id/color_edittext"
                style="@style/LabelTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/color_demo" />

            <Switch
                android:id="@+id/master_car_switch"
                style="CommonSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingTop="10dp"
                android:text="@string/is_this_master_car" />

            <Button
                android:id="@+id/confirm"
                style="@style/CommonButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>