<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyColor"
    android:orientation="vertical"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/date_label"
                style="@style/LabelTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <EditText
                android:id="@+id/date"
                style="@style/CommonEdittextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:inputType="date"
                android:longClickable="false" />

            <TextView
                android:id="@+id/mileage_label"
                style="@style/LabelTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mileage" />

            <EditText
                android:id="@+id/mileage"
                style="@style/CommonEdittextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />


            <TextView
                android:id="@+id/liters_label"
                style="@style/LabelTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/added_liters" />

            <EditText
                android:id="@+id/liters"
                style="@style/CommonEdittextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />


            <TextView
                android:id="@+id/cost_label"
                style="@style/LabelTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tank_cost" />

            <EditText
                android:id="@+id/cost"
                style="@style/CommonEdittextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <Switch
                android:id="@+id/full_tankup_switch"
                style="CommonSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/was_full_tankup" />
            <TextView
                android:id="@+id/full_tank_prompt"
                style="@style/LabelTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/remember_tank_full_sometimes"
                />


            <Button
                android:id="@+id/confirm"
                style="@style/CommonButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>