<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        android:background="@color/colorPrimary"
        android:elevation="4dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grayColor"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="397dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/auto_choose_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/greyColor"
                android:orientation="horizontal"
                android:padding="3dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Kosztuje 2zł/km"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Pali 9.4 L/100km"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/go_to_car_info_button"
                android:layout_width="14dp"
                android:layout_height="72dp"

                android:drawableTop="@android:drawable/ic_dialog_info"
                android:text="Więcej"
                android:textSize="10dp" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/historyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:elevation="4dp"
        android:outlineProvider="bounds"
        android:paddingTop="2dp"
        android:layout_marginTop="-2dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00737f">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grayColor">

        <Button
            android:id="@+id/go_to_tank_form_button"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_new_tankup"
            android:text="@string/new_tankup"
            android:textSize="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@+id/go_to_repair_button"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="5dp" />

        <Button
            android:id="@+id/go_to_repair_button"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_repair"
            android:text="@string/new_repair"
            android:textSize="10dp"
            app:layout_constraintStart_toEndOf="@+id/go_to_collision_button"
            app:layout_constraintEnd_toStartOf="@+id/go_to_tank_form_button"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/go_to_collision_button"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_collision"
            android:text="@string/new_collision"
            android:textSize="10dp"
            app:layout_constraintEnd_toStartOf="@+id/go_to_repair_button"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="5dp" />

    </android.support.constraint.ConstraintLayout>
    </FrameLayout></FrameLayout>
</LinearLayout>